--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -61,7 +61,7 @@
   
 }
 .tweet h2{
-    font-size: 32px;
+    font-size: 28px;
     border-radius:20px;
     text-align: center;
     margin-bottom:20px;
@@ -101,4 +101,22 @@
 .card{
     max-width:200px;
     max-height:320px;
+}
+
+
+
+
+
+.search{
+    margin:0 auto;
+    font-size:12px;
+    /* border:solid 1px black; */
+    border-radius: 20px;
+    padding:20px 30px;
+
+    background-color: rgb(232 232 232);
+}
+.search h2{
+    text-align: center;
+   
 }
