--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -120,3 +120,27 @@
     text-align: center;
    
 }
+
+
+
+#my_map {
+    text-align:center;
+ 
+
+}
+
+
+
+
+
+
+
+
+@media(max-width:600px){
+    #my_map {
+        width:300px !important;
+        height:300px !important;
+     
+    
+    }
+}
