--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,4 @@
 
-
-
 .container{
     max-width:none !important;
 
@@ -11,28 +9,29 @@
     min-height:800px;
 
     font-family: 'Times New Roman', Times, serif;
+    padding:0 !important;
 }
 .login{
     border-radius: 20px;
     
     width:100%;
-    height:600px;
+    height:800px;
     background-image: url('../img/fishing.jpg');
-    background-position: center;
+    background-position:top;
     background-size: cover;
     
  
 
 }
-.text-center{
+.notlogin{
     padding-top:150px;
 }
-.text-center h1{
+.notlogin h1{
     max-width:300px;
     color:white;
 
 }
-.text-center p{
+.notlogin p{
 
     color:white;
     margin:0;
@@ -110,11 +109,11 @@
 .search{
     margin:0 auto;
     font-size:12px;
-    /* border:solid 1px black; */
+    border:solid 1px #dadada;
     border-radius: 20px;
     padding:20px 30px;
 
-    background-color: rgb(232 232 232);
+    background-color: white;
 }
 .search h2{
     text-align: center;
@@ -134,6 +133,15 @@
 
 
 
+
+
+
+.microbtn{
+    transition-duration:1s;
+}
+.microbtn:hover{
+    background-color:#ececec !important;
+}
 
 
 @media(max-width:600px){
