--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,8 @@
-
+.row{
+    max-width:100%;
+}
 .container{
+    height:100%;
     max-width:none !important;
 
     background-image:url('../img/fish7.png');
