--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,12 @@
+body{
+    background-image:url('../img/fish7.png');
+    background-position:center;
+    background-size:contain;
+    background-repeat: repeat;
+}
+
+
+
 .row{
     margin:0 !important;
     max-width:100%;
@@ -6,17 +15,14 @@
     height:100%;
     max-width:none !important;
 
-    background-image:url('../img/fish7.png');
-    background-position:center;
-    background-size:cover;
-    background-repeat: repeat-y;
+   
     min-height:800px;
 
     font-family: 'Times New Roman', Times, serif;
     padding:0 !important;
 }
 .login{
-    border-radius: 20px;
+   
     
     width:100%;
     height:800px;
